[project]
name = "stock-market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "ta>=0.11.0",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]
